@@ -1,3 +1,8 @@
+2005-10-20  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* app/tools/gimprectangleoptions.c: remove fixed-center stuff
+	from options gui in order to simplify it.
+	
 2005-10-20  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/twain/twain.c: renamed menu entry to "Scanner/Camera"
